edited the index.html and the styles.css

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Movie Showcase</title>
+    <title>Flatiron Movie Theatre</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="movie_styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
@@ -62,6 +62,7 @@
                 </div>
             </div>
         </div>
+
         <div class="card">
             <img src="https://www.gstatic.com/tv/thumb/v22vodart/4232/p4232_v_v8_aa.jpg" alt="Santa Claus">
             <div class="card-content">
@@ -160,8 +161,8 @@
 
         <div class="card">
             <img src="https://www.gstatic.com/tv/thumb/v22vodart/45367/p45367_v_v8_aa.jpg" alt="Wild Rebels">
-            <div class="Wild Rebels">
-                <h3>The Touch Of Satan</h3>
+            <div class="card-content">
+                <h3>Wild Rebels</h3>
                 <p>A stock car driver goes undercover as the wheel man for a motorcycle gang.</p>
                 <div class="details">
                     <span>Runtime: 100 mins</span>
@@ -194,12 +195,11 @@
             </div>
         </div>
 
-        <!-- Add more cards as needed for the rest of the films -->
-
     </div>
 
     <footer>
         <p>&copy; 2024 Movie Showcase. All Rights Reserved.</p>
     </footer>
+    
 </body>
 </html>
