Added book tickets button

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                     <span>Runtime: 108 mins</span>
                     <span>Showtime: 04:00PM</span>
                 </div>
+                <button class="btn-buy-ticket">Book Ticket</button>
             </div>
         </div>
 
@@ -36,6 +37,7 @@
                     <span>Runtime: 118 mins</span>
                     <span>Showtime: 06:45PM</span>
                 </div>
+                <button class="btn-buy-ticket">Book Ticket</button>
             </div>
         </div>
 
@@ -48,6 +50,7 @@
                     <span>Runtime: 93 mins</span>
                     <span>Showtime: 09:30PM</span>
                 </div>
+                <button class="btn-buy-ticket">Book Ticket</button>
             </div>
         </div>
 
@@ -60,6 +63,7 @@
                     <span>Runtime: 101 mins</span>
                     <span>Showtime: 09:00PM</span>
                 </div>
+                <button class="btn-buy-ticket">Book Ticket</button>
             </div>
         </div>
 
@@ -72,6 +76,7 @@
                     <span>Runtime: 96 mins</span>
                     <span>Showtime: 03:30PM</span>
                 </div>
+                <button class="btn-buy-ticket">Book Ticket</button>
             </div>
         </div>
 
@@ -84,6 +89,7 @@
                     <span>Runtime: 112 mins</span>
                     <span>Showtime: 10:30PM</span>
                 </div>
+                <button class="btn-buy-ticket">Book Ticket</button>
             </div>
         </div>
 
@@ -96,6 +102,7 @@
                     <span>Runtime: 94 mins</span>
                     <span>Showtime: 07:30PM</span>
                 </div>
+                <button class="btn-buy-ticket">Book Ticket</button>
             </div>
         </div>
 
@@ -108,6 +115,7 @@
                     <span>Runtime: 115 mins</span>
                     <span>Showtime: 08:30PM</span>
                 </div>
+                <button class="btn-buy-ticket">Book Ticket</button>
             </div>
         </div>
 
@@ -120,6 +128,7 @@
                     <span>Runtime: 99 mins</span>
                     <span>Showtime: 07:30PM</span>
                 </div>
+                <button class="btn-buy-ticket">Book Ticket</button>
             </div>
         </div>
 
@@ -132,6 +141,7 @@
                     <span>Runtime: 50Mins</span>
                     <span>Showtime: 10:00PM</span>
                 </div>
+                <button class="btn-buy-ticket">Book Ticket</button>
             </div>
         </div>
 
@@ -144,6 +154,7 @@
                     <span>Runtime: 104 mins</span>
                     <span>Showtime: 06:00PM</span>
                 </div>
+                <button class="btn-buy-ticket">Book Ticket</button>
             </div>
         </div>
 
@@ -156,6 +167,7 @@
                     <span>Runtime: 104 mins</span>
                     <span>Showtime: 07:00PM</span>
                 </div>
+                <button class="btn-buy-ticket">Book Ticket</button>
             </div>
         </div>
 
@@ -168,6 +180,7 @@
                     <span>Runtime: 100 mins</span>
                     <span>Showtime: 09:00PM</span>
                 </div>
+                <button class="btn-buy-ticket">Book Ticket</button>
             </div>
         </div>
 
@@ -180,6 +193,7 @@
                     <span>Runtime: 40 mins</span>
                     <span>Showtime: 08:00PM</span>
                 </div>
+                <button class="btn-buy-ticket">Book Ticket</button>
             </div>
         </div>
 
@@ -192,6 +206,7 @@
                     <span>Runtime: 98 mins</span>
                     <span>Showtime: 04:45PM</span>
                 </div>
+                <button class="btn-buy-ticket">Book Ticket</button>
             </div>
         </div>
 
